force-app/main/default/objects/Landing_Number__c/Landing_Number__c.object-meta.xml
<CustomObject>
    <label>Landing Number</label>
    <nameField>
        <label>Landing Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landing Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>