force-app/main/default/objects/Landing_Number__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Meta Ads</fullName>
            </value>
            <value>
                <fullName>Portals</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Lead Nurturing</fullName>
            </value>
            <value>
                <fullName>Direct Walk-in</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Referral and Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>