force-app/main/default/objects/Landing_Number__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Portals</fullName>
            </value>
            <value>
                <fullName>Search Ads</fullName>
            </value>
            <value>
                <fullName>Display Ads</fullName>
            </value>
            <value>
                <fullName>YouTube Ads</fullName>
            </value>
            <value>
                <fullName>Performance Max (Pmax)</fullName>
            </value>
            <value>
                <fullName>Demand Gen</fullName>
            </value>
            <value>
                <fullName>Facebook Lead Ads</fullName>
            </value>
            <value>
                <fullName>Instagram Lead Ads</fullName>
            </value>
            <value>
                <fullName>WhatsApp Click to Chat</fullName>
            </value>
            <value>
                <fullName>Facebook Click to Website (CTW)</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>MagicBricks</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>CommonFloor</fullName>
            </value>
            <value>
                <fullName>Website Lead Form</fullName>
            </value>
            <value>
                <fullName>Website Chat</fullName>
            </value>
            <value>
                <fullName>Call Tracking Number</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Walk-in by Channel Partner</fullName>
            </value>
            <value>
                <fullName>Registered Lead (via Channel Partner)</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Paper Inserts</fullName>
            </value>
            <value>
                <fullName>Signboards</fullName>
            </value>
            <value>
                <fullName>Newspaper Inserts</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Hoardings</fullName>
            </value>
            <value>
                <fullName>Newspaper Print Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>